--- a/app/src/main/res/layout/fragment_producto_detallado.xml
+++ b/app/src/main/res/layout/fragment_producto_detallado.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="#D3D3D3"
     android:orientation="vertical"
+    android:textAlignment="center"
     tools:context=".Interfaces.ProductoDetallado">
 
     <androidx.cardview.widget.CardView
@@ -38,91 +39,117 @@
 
     </androidx.cardview.widget.CardView>
 
-    <ScrollView
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/backgroundImageView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/fondoswitch" />
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="271dp"
-                android:layout_marginHorizontal="60dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="20dp"
-                app:cardCornerRadius="50dp">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/ivProductoDetallado"
-                    android:layout_width="243dp"
-                    android:layout_height="239dp"
-                    android:layout_gravity="center"
-                    tools:src="@tools:sample/avatars" />
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                app:cardCornerRadius="40dp"
-                app:cardElevation="350dp">
+                android:orientation="vertical">
 
-                <LinearLayout
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="425dp"
-                    android:background="#FFFFFF"
-                    android:orientation="vertical">
+                    android:layout_height="316dp"
+                    android:layout_marginHorizontal="60dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="20dp"
+                    app:cardCornerRadius="50dp">
 
-                    <TextView
-                        android:id="@+id/tituloProductoDetallado"
+                    <ImageView
+                        android:id="@+id/ivProductoDetallado"
+                        android:layout_width="247dp"
+                        android:layout_height="314dp"
+                        android:layout_gravity="center"
+                        tools:src="@tools:sample/avatars" />
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="22dp"
+                    android:layout_marginVertical="10dp"
+                    app:cardCornerRadius="40dp"
+                    app:cardElevation="350dp">
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="40dp"
-                        android:gravity="center_horizontal"
+                        android:background="#FFFFFF"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tituloProductoDetallado"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="30dp"
+                            android:gravity="center_horizontal"
+                            android:text="TextView"
+                            android:textColor="#FF2B2B"
+                            android:textSize="38sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/descripcionProductoDetallado"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="25dp"
+                            android:layout_marginBottom="25dp"
+                            android:text="TextView"
+                            android:textAlignment="center"
+                            android:textSize="20sp" />
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    app:cardCornerRadius="15dp">
+
+                    <TextView
+                        android:id="@+id/tvPrecioProductoDetallado"
+                        android:layout_width="248dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|center_horizontal"
                         android:text="TextView"
-                        android:textColor="#FF2B2B"
+                        android:textAlignment="center"
+                        android:textColor="@color/fui_bgTwitter"
                         android:textSize="34sp"
                         android:textStyle="bold" />
+                </androidx.cardview.widget.CardView>
 
-                    <TextView
-                        android:id="@+id/descripcionProductoDetallado"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="25dp"
-                        android:layout_marginBottom="10dp"
-                        android:text="TextView"
-                        android:textSize="16sp" />
+                <Button
+                    android:id="@+id/btAñadirProductoProductosDetallados"
+                    android:layout_width="match_parent"
+                    android:layout_height="58dp"
+                    android:layout_gravity="bottom"
+                    android:layout_marginHorizontal="50dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:backgroundTint="#FF4444"
+                    android:text="Añadir al carrito"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
-                </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
 
-                <TextView
-                    android:id="@+id/tvPrecioProductoDetallado"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|center_horizontal"
-                    android:layout_margin="10dp"
-                    android:text="TextView"
-                    android:textSize="20sp" />
-
-            </androidx.cardview.widget.CardView>
-
-            <Button
-                android:id="@+id/btAñadirProductoProductosDetallados"
-                android:layout_width="match_parent"
-                android:layout_height="58dp"
-                android:layout_gravity="bottom"
-                android:layout_marginHorizontal="50dp"
-                android:layout_marginBottom="10dp"
-                android:backgroundTint="#FF4444"
-                android:text="Añadir al carrito"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-    </ScrollView>
+    </FrameLayout>
 
 </LinearLayout>
